--- a/src/styles/5-components/_components-footer.scss
+++ b/src/styles/5-components/_components-footer.scss
@@ -3,12 +3,14 @@
 
   &__wrapper {
     @extend .container,
-      .mx-auto,
       .pt-12,
       .pb-16,
       .flex,
       .items-center,
-      .justify-center;
+      .justify-center,
+      .max-w-screen-xl,
+      .mx-auto,
+      .px-8;
 
     &__list {
       @extend .h-12,
